verify: run the proxy end-to-end on SDK 5, which falsifies gate 7.1's premise
Four things asked for together. The first one overturned a claim this repository had been making in a
section HEADING, so that is where this starts.

GATE 7.1'S PREMISE IS FALSE. The heading read "mTLS private key must be EXTRACTABLE". Measured on
hsm2m.medium in FIPS mode with cloudhsm-jce 5.18.0 on JDK 17, driving this repository's own
PixTlsEngineConfigurer from the jar the reactor built: a NON-EXTRACTABLE HSM key completed a real
mTLS handshake and the server accepted the client certificate.

Three routes were tried against a server demanding a client certificate:

  JKS setKeyEntry              -> KeyStoreException: Cannot get key bytes, not PKCS#8 encoded
  KeyManagerFactory.init(hsm)  -> init succeeds, handshake completes, clientCertsSent=0
  custom X509KeyManager        -> clientCertsSent=1, TLSv1.2 / ECDHE-RSA-AES256-GCM-SHA384,
                                  server logged depth=0 CN=pix-pix-mtls-priv

Control: with no client key configured the server logged zero client subjects.

The middle row is the one worth recording, because it fails SILENTLY - nothing throws, a handshake
completes, and no credential is served. An earlier version of this very measurement recorded it as a
pass on the strength of "no exception was thrown", and only clientCertsSent=0 exposed it. The cause is
structural: a KeyManager must serve a private key AND a chain under one alias, and the HSM keystore
holds keys with no chain attached.

The remedy is ~40 lines. X509KeyManager hands JSSE a PrivateKey OBJECT and never asks for the encoded
bytes - which is exactly why a non-extractable key works there and cannot work in a JKS. What still
holds from the old ranking is that SslProvider.OPENSSL must give way to the JSSE path, because an HSM
key's getEncoded() is null and the OpenSSL-backed provider needs those bytes.

THE SIGNING PATH NEEDS NO CHANGE FOR SDK 5. The repository's own Iso20022XmlSigner signed a 